# chainmatch

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC-CHAIN-v0.1-BASE.md  SPEC-PROTOTYPE-v0.1.md  TASKS.md  TESTPLAN.md
contracts/: foundry.toml
crates/ace-client/: Cargo.toml
crates/ace-client/src/: main.rs
crates/ace-client/src/resources/: court.rs  mod.rs
crates/ace-client/src/states/: hero_select.rs  menu.rs  mod.rs  playing.rs  post_match.rs
crates/ace-client/src/systems/: aiming.rs  ball_physics.rs  hud.rs  input.rs  mod.rs  movement.rs  serve.rs  shot.rs
crates/ace-shared/: Cargo.toml
crates/ace-shared/src/: lib.rs  physics.rs  scoring.rs  types.rs
