[workspace]
members = ["crates/ace-client", "crates/ace-shared"]
resolver = "2"

[workspace.dependencies]
# Game engine
bevy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Crypto
sha2 = "0.10"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
